[ENH] Adding spacing between full-size blocks. Fixing incorrect margins in edge case scenarios.

--- a/5-objects/_objects.grid.scss
+++ b/5-objects/_objects.grid.scss
@@ -73,12 +73,24 @@ $block-mobile-margin-vertical:       $block-margin-vertical / 1.5;
 
 /* ===== BLOCKS ============================================================= */
 
+// To be @extend-ed
+@mixin block-top-margin {
+    padding-top: $block-margin-vertical;
+
+    @include breakpoint( $mobile ) {
+        padding-top: $block-mobile-margin-vertical;
+    }
+
+    @include breakpoint( $mobile-large ) {
+        padding-top: $block-mobile-large-margin-vertical;
+    }
+}
+
 
 // Standard block container
 .block {
     display: block;
     padding: $block-margin-vertical $block-margin-horizontal;
-    //    vertical-align: top;  used when `display: block` is converted into `display: table`
 
     // 1. Collapse space in all siblings (default)...
     .sector + .sector & { padding-top: 0; }
@@ -88,28 +100,19 @@ $block-mobile-margin-vertical:       $block-margin-vertical / 1.5;
 
     .sector.highlighted + .sector &,
     .sector.separated + .sector &,
-    .sector.blank + .sector &,
-    .sector .block-container .blank:first-child,
-    .sector .block-container .blank + &:not(:first-child), // Overrides 1B in case dynamic block is NOT rendered (e.g. specific content only)
+    .sector.blank + .sector &, // Overrides 1B in case dynamic block is NOT rendered (e.g. specific content only)
 
     // Resets block's margin
     .sector .layout-rebase & {
-        padding-top: $block-margin-vertical;
-
-        @include breakpoint( $mobile ) {
-            padding-top: $block-mobile-margin-vertical;
-        }
-
-        @include breakpoint( $mobile-large ) {
-            padding-top: $block-mobile-large-margin-vertical;
-        }
+        @include block-top-margin();
     }
 
 
     // 1B. ... and all block-containers
-    .sector .block-container &:not(:first-child) { padding-top: 0; }
-    .block + .block-container &:first-child { padding-top: 0; }
+    .sector .block-container &:not(:first-child),
+    .block + .block-container &:first-child,
     .block + .block-container.two-col-layout &:last-child { padding-top: 0; }
+
 
     // 2) Responsiveness
     @include breakpoint( $mobile ) {
@@ -121,6 +124,11 @@ $block-mobile-margin-vertical:       $block-margin-vertical / 1.5;
     }
 
     &.no-bg { background: inherit; } // Eliminates background
+}
+
+
+.sector .block-container .blank:first-child {
+    @include block-top-margin();
 }
 
 
@@ -165,15 +173,7 @@ $block-mobile-margin-vertical:       $block-margin-vertical / 1.5;
             // Right column
             &:last-child {
                 @include make-table-column( $two-col-layout-right-ratio );
-                padding-top: $block-margin-vertical;
-
-                @include breakpoint( $mobile ) {
-                    padding-top: $block-mobile-margin-vertical;
-                }
-
-                @include breakpoint( $mobile-large ) {
-                    padding-top: $block-mobile-large-margin-vertical;
-                }
+                @include block-top-margin();
             }
 
             &.btns-holder {
@@ -219,17 +219,9 @@ $block-mobile-margin-vertical:       $block-margin-vertical / 1.5;
 
             // Right column
             &:last-child {
-                padding-top: $block-margin-vertical;
                 border-left: none;
                 border-top: $delim-border;
-
-                @include breakpoint( $mobile ) {
-                    padding-top: $block-mobile-margin-vertical;
-                }
-
-                @include breakpoint( $mobile-large ) {
-                    padding-top: $block-mobile-large-margin-vertical;
-                }
+                @include block-top-margin();
             }
 
             @include breakpoint( $desktop-and-bigger) {
